chore: saving new changes in related work

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -125,7 +125,7 @@
   author    = {Webber, Christopher and Sporny, Manu},
   year      = {2017},
   month     = {Dec}
-} 
+}
 
 # Activity Streams
  @misc{snell_prodromou_2017,
@@ -148,6 +148,27 @@
   month   = {Apr}
 } 
 
+# HTTP Signatures
+ @misc{cavage_sporny_2019,
+  title     = {Signing HTTP Messages},
+  url       = {https://datatracker.ietf.org/doc/html/draft-cavage-http-signatures-12},
+  journal   = {IETF},
+  publisher = {IETF},
+  author    = {Cavage, M. and Sporny, M.},
+  year      = {2019},
+  month     = {Oct}
+} 
+
+# Linked Data
+ @misc{berners-lee_2006,
+  title   = {Linked data},
+  url     = {https://www.w3.org/DesignIssues/LinkedData.html},
+  journal = {Linked Data - Design Issues},
+  author  = {Berners-Lee, Tim},
+  year    = {2006},
+  month   = {Jul}
+} 
+
 # Interview with Gargon
  @misc{tilley_2018,
   title     = {One mammoth of a job: An interview with Eugen Rochko of mastodon},
@@ -158,6 +179,28 @@
   year      = {2018},
   month     = {Jul}
 } 
+
+# Thoughts on the social graph
+ @misc{fitzpatrick_recordon_2007,
+  title   = {Thoughts on the social graph},
+  url     = {http://bradfitz.com/social-graph-problem/},
+  journal = {Brad's Thoughts on the Social Graph},
+  author  = {Fitzpatrick, Brad and Recordon, David},
+  year    = {2007},
+  month   = {Aug}
+} 
+
+# Footprints of a Mastodon
+@inproceedings{8845221,
+  author    = {Zignani, Matteo and Quadri, Christian and Gaito, Sabrina and Cherifi, Hocine and Rossi, Gian Paolo},
+  booktitle = {IEEE INFOCOM 2019 - IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS)},
+  title     = {The Footprints of a “Mastodon”: How a Decentralized Architecture Influences Online Social Relationships},
+  year      = {2019},
+  volume    = {},
+  number    = {},
+  pages     = {472-477},
+  doi       = {10.1109/INFCOMW.2019.8845221}
+}
 
 # Fediverse
  @misc{holloway_2018,
