chore: advances in related work

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -213,6 +213,30 @@
   month     = {Oct}
 } 
 
+# ActivityPub rocks!
+ @misc{lemmer-webber_2017,
+  title   = {Mastodon launches their ActivityPub support, and a new CR!},
+  url     = {https://activitypub.rocks/news/mastodon-ap-and-new-cr.html},
+  journal = {Activitypub Rocks!},
+  author  = {Lemmer-Webber, Christopher},
+  year    = {2017},
+  month   = {Sep}
+}
+
+# Challenges in the Decentralised Web
+
+@article{https://doi.org/10.48550/arxiv.1909.05801,
+  doi       = {10.48550/ARXIV.1909.05801},
+  url       = {https://arxiv.org/abs/1909.05801},
+  author    = {Raman, Aravindh and Joglekar, Sagar and De Cristofaro, Emiliano and Sastry, Nishanth and Tyson, Gareth},
+  keywords  = {Networking and Internet Architecture (cs.NI), Cryptography and Security (cs.CR), Computers and Society (cs.CY), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Challenges in the Decentralised Web: The Mastodon Case},
+  publisher = {arXiv},
+  year      = {2019},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
 #Webhost Metadata
  @misc{cook_2011,
   title   = {RFC 6415 - web host metadata},
@@ -233,6 +257,17 @@
   author    = {Nottingham, M.},
   year      = {2019},
   month     = {May}
+} 
+
+# Ostatus
+ @misc{prodromou_vibber_walker_copley_2010,
+  title     = {Draft: Ostatus 1.0 draft 2 - W3},
+  url       = {https://www.w3.org/community/ostatus/wiki/images/9/93/OStatus_1.0_Draft_2.pdf},
+  journal   = {W3C},
+  publisher = {W3C},
+  author    = {Prodromou, Evan and Vibber, B. and Walker, J. and Copley, Z.},
+  year      = {2010},
+  month     = {Aug}
 } 
 
 # RFC Webfinger
