--- a/Thesis/content/03_concept_and_design.tex
+++ b/Thesis/content/03_concept_and_design.tex
@@ -136,7 +136,7 @@ As mentioned in the definitions section, Mastodon's full username includes the d
 % Even though there are cases when very similar domains may lead to confusion and may present some security issues. Examples of this can be found simply by comparing the most used Mastodon instance “mastodon.social” with another big\\-in\-user\-count instance such as “mstdn.social”. This type of username allows the following scenarios to play out, where differences are minimal and easily missed out, such as alice@mastodon.social and alice@mstdn.social. In addition, some users have commented that when the username is too long, the domain is not longer visible. This can be exploited by malicious actors, who may open an account in a different server with the same username as their target. Clone their profile, and try to social engineer the target's followers. 
 
 \lstset{style=JSONStyle}
-\begin{lstlisting}[language=PHP, caption=Alice's actor object, label=fig:alice_actor_object, float=h!]
+\begin{lstlisting}[language=PHP, caption=Alice's actor object, label=fig:alice_actor_object, float=h]
 
 {
 	"@context": [
